--- a/src/components/numberInput/numberInput.module.css
+++ b/src/components/numberInput/numberInput.module.css
@@ -1,3 +1,10 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+}
+
 .errorMsg {
   color: red;
   font-style: italic;
