--- a/src/app.module.css
+++ b/src/app.module.css
@@ -8,6 +8,7 @@
 .forms {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: start;
   justify-content: space-evenly;
   width: 100%;
